# aerostack

./: .gitignore  .gitmodules  IMPORTANT_READ_BEFORE_USING_GIT_WITH_STACK.md  LICENSE  README.md  addicionalPackagesToInstall.txt  configSubmodules.cfg  expectScript.sh  initSubmodules.sh  setup.sh  submodulesInfo  updateFileInAllBranches.sh
documentation/exampleModule/droneExamplePackage/: CMakeLists.txt  README  _package.xml
documentation/exampleModule/droneExamplePackage/src/include/: droneExamplePackageHeader.h
documentation/exampleModule/droneExamplePackage/src/source/: droneExamplePackageSource.cpp
documentation/exampleModule/droneExamplePackageROSModule/: CMakeLists.txt  README  _package.xml
documentation/exampleModule/droneExamplePackageROSModule/launch/: droneExamplePackageROSModule_First.launch
documentation/exampleModule/droneExamplePackageROSModule/src/include/: droneExamplePackageROSModuleHeader.h
documentation/exampleModule/droneExamplePackageROSModule/src/sources/: droneExamplePackageROSModuleSource.cpp  droneExamplePackageROSModule_SourceNode.cpp
stack_deprecated/common/droneMsgsROS/: .gitignore  CMakeLists.txt  package.xml
stack_deprecated/common/droneMsgsROS/msg/: AliveSignal.msg  AllBeliefs.msg  BehaviorCommand.msg  BehaviorEvent.msg  BeliefStatement.msg  Capability.msg  CommandTrajectoryPath.msg  CommandTrajectoryWaypoint.msg  CompletedAction.msg  CompletedMission.msg  ErrorType.msg  Event.msg  FlightAnimation.msg  Landmark3D.msg  ListOfBehaviors.msg  ListOfCapabilities.msg  ListOfProcesses.msg  Observation3D.msg  PathWithID.msg  ProcessDescriptor.msg  ProcessDescriptorList.msg  ProcessError.msg  ProcessState.msg  PublicEvent.msg  QRInterpretation.msg  SkillDescriptor.msg  SkillState.msg  SkillsList.msg  Target.msg  VectorROIs.msg  actionArguments.msg  actionData.msg  battery.msg  distanceToObstacle.msg  distancesToObstacles.msg  droneAltitude.msg  droneAltitudeCmd.msg  droneAutopilotCommand.msg  droneCommand.msg  droneDAltitudeCmd.msg  (+57 more)
stack_deprecated/common/droneMsgsROS/src/include/: communication_definition.h  nodes_definition.h
stack_deprecated/common/droneMsgsROS/srv/: AddBelief.srv  BehaviorSrv.srv  CheckBehaviorFormat.srv  CheckBehaviorGroupConsistency.srv  CheckBeliefFormat.srv  CheckCapabilitiesConsistency.srv  CheckReactiveActivation.srv  CheckSituation.srv  ConsultAvailableBehaviors.srv  ConsultBelief.srv  ConsultDefaultBehaviorValues.srv  ConsultIncompatibleBehaviors.srv  GenerateID.srv  GeneratePath.srv  InhibitBehavior.srv  InitiateBehaviors.srv  QueryLastGeneratedID.srv  QueryResources.srv  RecordReactiveBehaviors.srv  RemoveBelief.srv  RequestBehavior.srv  RequestProcesses.srv  RequestResources.srv  StartBehavior.srv  StopBehavior.srv  askForModule.srv  classifyImage.srv  configurationFolder.srv  getFlightAnim.srv  missionName.srv  openMissionFile.srv  perceptionManagerUpdateMissionStateSrv.srv  setControlMode.srv  setInitDroneYaw_srv_type.srv  skillRequest.srv
stack_deprecated/common/drone_module/: .gitignore  CMakeLists.txt  README.md  package.xml
stack_deprecated/common/drone_module/src/include/: droneModuleROS.h
stack_deprecated/common/drone_module/src/source/: droneModuleROS.cpp
stack_deprecated/common/drone_module_interface/: CMakeLists.txt  README  package.xml
stack_deprecated/common/drone_module_interface/src/include/: droneIBVScontrollerinterface.h  droneModuleInterfaceList.h  drone_iarc14_brain_interface.h  dronecontrollerinterface.h  droneekfstateestimatorinterface.h  dronelocalizerinterface.h  dronemoduleinterface.h  dronetrajectorycontrollerinterface.h
stack_deprecated/common/drone_module_interface/src/source/: droneIBVScontrollerinterface.cpp  droneModuleInterfaceList.cpp  drone_iarc14_brain_interface.cpp  dronecontrollerinterface.cpp  droneekfstateestimatorinterface.cpp  dronelocalizerinterface.cpp  dronemoduleinterface.cpp  dronetrajectorycontrollerinterface.cpp
stack_deprecated/common/drone_process/: CMakeLists.txt  package.xml
stack_deprecated/common/drone_process/include/: drone_process.h
stack_deprecated/common/drone_process/source/: drone_process.cpp
stack_deprecated/libraries/lib_cvgthread/: CMakeLists.txt  mainpage.dox  package.xml
stack_deprecated/libraries/lib_cvgthread/src/include/: cvgCondition.h  cvgException.h  cvgMutex.h  cvgSemaphore.h  cvgThread.h
stack_deprecated/libraries/lib_cvgthread/src/source/: cvgException.cpp  cvgMutex.cpp  cvgThread.cpp
stack_deprecated/libraries/lib_pose/: CMakeLists.txt  README.md  package.xml
stack_deprecated/libraries/lib_pose/src/include/: pose.h  poseOperations.h
stack_deprecated/libraries/lib_pose/src/sources/: pose.cpp  poseOperations.cpp
stack_deprecated/libraries/lib_pugixml/: CMakeLists.txt  README.md  package.xml
stack_deprecated/libraries/referenceFrames/: CMakeLists.txt  README.md  package.xml
stack_deprecated/logging/droneLoggerROSModule/: CMakeLists.txt  mainpage.dox  package.xml
stack_deprecated/logging/droneLoggerROSModule/launch/: droneLoggerROSModule.launch
stack_deprecated/logging/lib_cvglogger/: .gitignore  CMakeLists.txt  mainpage.dox  package.xml
stack_deprecated/logging/lib_cvgloggerROS/: .gitignore  CMakeLists.txt  mainpage.dox  package.xml
stack_deprecated/logging/lib_cvgloggerROS/srv/: logThisString.srv
stack_devel/camera/camera_overlay/: #CMakeLists.txt#  CMakeLists.txt  package.xml
stack_devel/camera/camera_overlay_process/: CMakeLists.txt  package.xml
stack_devel/camera/camera_overlay_process/launch/: camera_overlay.launch
stack_devel/executive_system/self_localization_selector_process/: CMakeLists.txt  README.md  package.xml
stack_devel/executive_system/self_localization_selector_process/launch/: self_localization_selector_process.launch
stack_devel/planning_system/task_based_mission_planner/: CMakeLists.txt  README.md  package.xml
stack_devel/planning_system/task_based_mission_planner_process/: CMakeLists.txt  README.md  mission_specification_test.xml  package.xml
stack_devel/planning_system/task_based_mission_planner_process/launch/: task_based_mission_planner_ROS_module.launch
(+1192 files in other folders)
