<package>
	<name>droneMsgsROS</name>
	<version>1.0.0</version>
	<description>
    		This package is droneMsgsROS.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD-3</license>
	<url>http://ros.org/wiki/droneMsgsROS</url>

  	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
  	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
        <build_depend>std_srvs</build_depend>
        <build_depend>opencv_apps</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
        <run_depend>std_srvs</run_depend>
        <run_depend>opencv_apps</run_depend>


        <export></export>
</package>


