<package>
	<name>droneModuleInterfaceROS</name>
	<version>1.0.0</version>
	<description>
    		This package is droneModuleInterfaceROS.
	</description>
	<author email="jespestana@gmail.com">Jesus Pestana Puerta</author>
	<maintainer email="jespestana@gmail.com">Jesus Pestana Puerta</maintainer>
  	<license>GPLv3</license>
	<url>http://ros.org/wiki/droneModuleInterfaceROS</url>

  	<buildtool_depend>catkin</buildtool_depend>


	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
        <build_depend>std_srvs</build_depend>
	<build_depend>lib_cvgutils</build_depend>
	<build_depend>droneMsgsROS</build_depend>
        <build_depend>cv_bridge</build_depend>
        <build_depend>altitude_controller_process_main</build_depend>
        <build_depend>attitude_controller_process</build_depend>
        <build_depend>speed_controller_process</build_depend>
        <build_depend>position_controller_process</build_depend>
        <build_depend>trajectory_controller_process</build_depend>



	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
        <run_depend>std_srvs</run_depend>
	<run_depend>lib_cvgutils</run_depend>
	<run_depend>droneMsgsROS</run_depend>
        <run_depend>cv_bridge</run_depend>
        <run_depend>altitude_controller_process_main</run_depend>
        <run_depend>attitude_controller_process</run_depend>
        <run_depend>speed_controller_process</run_depend>
        <run_depend>position_controller_process</run_depend>
        <run_depend>trajectory_controller_process</run_depend>

</package>


