<package>
	<name>lib_cvgthread</name>
	<version>1.0.0</version>
	<description>
    		This package is lib_cvgthread.
	</description>
	<author email="jespestana@gmail.com">Jesus Pestana Puerta</author>
	<maintainer email="jespestana@gmail.com">Jesus Pestana Puerta</maintainer>
  	<license>GPLv3</license>
	<url>http://ros.org/wiki/lib_cvgthread</url>

  	<buildtool_depend>catkin</buildtool_depend>


</package>


