<package>
	<name>lib_pugixml</name>
	<version>1.0.0</version>
	<description>
    		This package is lib_pugixml.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/lib_pugixml</url>

  	<buildtool_depend>catkin</buildtool_depend>


</package>


