<package>
	<name>droneLoggerROSModule</name>
	<version>1.0.0</version>
	<description>
    		This package is droneLoggerROSModule.
	</description>
	<author email="jespestana@gmail.com">Jesus Pestana Puerta</author>
	<maintainer email="jespestana@gmail.com">Jesus Pestana Puerta</maintainer>
  	<license>GPLv3</license>
	<url>http://ros.org/wiki/droneLoggerROSModule</url>

  	<buildtool_depend>catkin</buildtool_depend>


  	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>droneModuleROS</build_depend>
	<build_depend>droneMsgsROS</build_depend>
	<build_depend>lib_cvglogger</build_depend>
	<build_depend>lib_cvgloggerROS</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>droneModuleROS</run_depend>
	<run_depend>droneMsgsROS</run_depend>
	<run_depend>lib_cvglogger</run_depend>
	<run_depend>lib_cvgloggerROS</run_depend>



</package>


